# Manifold-Markets-Trading-Bot

./: CONTRIBUTING.md  README.md  app.py  pyproject.toml  replit.md  requirements.txt
bot/: __init__.py  alerts.py  api_client.py  arbitrage.py  backtesting.py  config.py  ensemble_strategy.py  kelly.py  portfolio.py  portfolio_optimizer.py  strategies.py
docs/: MANIFOLDBOT_CONTRIBUTIONS.md
examples/: simple_bot.py
